2003-08-31  Pavel Roskin  <proski@gnu.org>

	* widget.h (button_new): Remove unused extra argument.  Adjust
	all dependencies.

	* option.c (check_options): Remove tk field.
	* widget.c: Comment fix to get rid of references to Tk.
	* wtools.c (real_input_dialog_help): Rename tk_name to histname.
	Remove names from non-input widgets.

	* widget.h: Completely get rid of tkname.  Rename it to histname
	for the input widget.  Adjust all dependencies.

	* dlg.h (struct Widget): Remove tkname field.
	(init_widget): Remove tkname argument.
	* widget.h (listbox_new): Likewise.
	Adjust all dependencies.

2003-08-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cmd.c (edit_symlink_cmd): Fix possible off-by-one after
	readlink().
	* file.c (make_symlink): Likewise.
	* main.c (copy_readlink): Likewise.
	* screen.c (display_mini_info): Likewise.
	(chdir_to_readlink): Likewise.
	* util.c (resolve_symlinks): Likewise.

2003-08-18  Pavel Roskin  <proski@gnu.org>

	* cmd.c (delete_cmd_local): New function.  Remove file under the
	cursor, regardless of marks.
	* screen.c (panel_keymap): Bind it to F18.

	* file.c (panel_operate_generate_prompt): Remove source
	calculation, it doesn't belong here.
	(panel_operate): Change arguments: drop ask_user and thedefault,
	introduce force_single.  force_single changes default to the
	current file and ignores selection.  Adjust all dependencies.

2003-08-17  Pavel Roskin  <proski@gnu.org>

	* dir.h (file_entry): Rename "buf" to "st".  Adjust all
	dependencies.

2003-08-01  Pavel Roskin  <proski@gnu.org>

	* main.c: Rename PanelMenu to LeftMenu.  Don't assume that
	LeftMenu and RightMenu are identical.
	From Pavel Tsekov <ptsekov@gmx.net>

2003-07-28  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* main.c: Make more variables static.

2003-07-23  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): Add more sequences for xterm-179 by
	Thomas E. Dickey.

2003-07-21  Pavel Roskin  <proski@gnu.org>
